force-app/main/default/objects/Property__c/listViews/New_Listings.listView-meta.xml
<ListView>
        <fullName>New_Listings</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pre-Market,Listed</value>
        </filters>
        <label>New Listings</label>
    </ListView>